--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/logan/.netbeans/16/build.properties
+user.properties.file=C:\\Users\\K\u00e9pir\u00f3Bal\u00e1zs(SZOFT_2\\AppData\\Roaming\\NetBeans\\17\\build.properties
